# Secure4InArow

./: .gitignore  CMakeLists.txt  README.md
Client/: CertificateManager.cpp  CertificateManager.h  Client.cpp  Client.h  ClientMain.cpp  GameBoard.cpp  GameBoard.h  P2PConnectionManager.cpp  P2PConnectionManager.h  ServerConnectionManager.cpp  ServerConnectionManager.h
Client/Certificate/: Lemmi_Pacini_CA_cert.pem  Lemmi_Pacini_CA_crl.pem
Client/Client_Key/: Alice_prvkey.pem  Bob_prvkey.pem  Chad_prvkey.pem  Chad_pubkey.pem  Dave_prvkey.pem  Dave_pubkey.pem  Eve_prvkey.pem  Eve_pubkey.pem  Frank_prvkey.pem  Frank_pubkey.pem
Libraries/: Constant.h  DiffieHellamnnManager.cpp  DiffieHellamnnManager.h  DiffieHellmannManager.cpp  DiffieHellmannManager.h  SignatureManager.cpp  SignatureManager.h  SymmetricEncryptionManager.cpp  SymmetricEncryptionManager.h
Server/: Server.cpp  Server.h  ServerMain.cpp  UserConnectionManager.cpp  UserConnectionManager.h
Server/Server_Keys/: 4InARowServerPrvkey.pem  4InARowServer_cert.pem
Server/Users_Public_Keys/: Alice_pubkey.pem  Bob_pubkey.pem
