cmake_minimum_required(VERSION 3.17)
project(all)
find_package(OpenSSL REQUIRED)
link_libraries(pthread)
link_libraries(crypto)
#include_directories(/Users/lauralemmi/openssl-1.1.1a/include/)
#include_directories(/usr/local/Cellar/openssl@1.1/1.1.1d/include/)
#link_directories(/usr/local/Cellar/openssl\@1.1/1.1.1g/lib)
set(CMAKE_CXX_STANDARD 14)
add_executable(Server Server/Server.cpp Server/Server.h Libraries/SignatureManager.cpp Libraries/SignatureManager.h  Libraries/SymmetricEncryptionManager.cpp Libraries/SymmetricEncryptionManager.h Server/UserConnectionManager.cpp Server/UserConnectionManager.h Server/ServerMain.cpp Libraries/Constant.h Libraries/DiffieHellmannManager.cpp Libraries/DiffieHellmannManager.h)
add_executable(Client Client/Client.cpp Client/Client.h Libraries/SignatureManager.cpp Libraries/SignatureManager.h  Libraries/SymmetricEncryptionManager.cpp Libraries/SymmetricEncryptionManager.h Client/CertificateManager.cpp Client/CertificateManager.h Client/ServerConnectionManager.cpp Client/ServerConnectionManager.h Libraries/Constant.h Client/ClientMain.cpp Libraries/DiffieHellmannManager.cpp Libraries/DiffieHellmannManager.h)